fix(docs): expand English DEPLOYMENT.md to match Chinese version (212→1094 lines)
English DEPLOYMENT.md was severely incomplete compared to Chinese DEPLOYMENT-zh-CN.md:
- Missing all subsections (3.1-3.4, 4.1-4.4, 5.1-5.6, 6.1-6.4, 7.1-7.3)
- Missing Section 8: Backup & Recovery (backup scripts, cron, disaster recovery)
- Missing Appendix (Docker commands, DB queries, API test, benchmark)
- Missing Contact & Support section

Added full content matching Chinese version structure:
- Section 3: JVM config, connection pool, security, performance optimization
- Section 4: Flyway migration table (V1-V16), execution, verification, rollback
- Section 5: Complete environment variable tables (core/DB/LLM/embedding/runtime)
- Section 6: Health check endpoints, log config, Prometheus, key metrics
- Section 7: Detailed troubleshooting (startup/DB/OOM/LLM/performance/logs)
- Section 8: Backup scripts, recovery procedures, disaster recovery plan
- Appendix: Docker commands, DB queries, API test, benchmark

Cross-links verified: EN↔ZH bidirectional links intact.
Flyway migration table V1-V16 verified against actual migration files.